fixed secondary link sizes and spacingx for consistency with primary links

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -205,11 +205,11 @@ a.primary {
 
 /* Secondary Button */
 button.secondary {
-  @apply px-4 sm:px-5 md:px-6 lg:px-8 py-2 sm:py-2.5 md:py-3 lg:py-3.5 text-sm sm:text-base md:text-base lg:text-lg font-semibold bg-secondary border border-primary text-primary 
+  @apply px-4 sm:px-5 md:px-6 lg:px-8 py-2 sm:py-2.5 md:py-3 lg:py-3.5 text-sm sm:text-base md:text-base lg:text-lg font-semibold  border border-primary text-primary 
   rounded-lg hover:bg-primary-hover/30 focus:bg-primary-hover/30  transition-opacity duration-200 active:scale-95;
 }
 a.secondary {
-  @apply px-4 sm:px-5 md:px-6 lg:px-8 py-2 text-sm sm:text-base md:text-base lg:text-lg font-semibold bg-primary/10 border border-primary text-primary 
+  @apply px-4 sm:px-5 md:px-6 lg:px-8 py-2 sm:py-2.5 md:py-3 lg:py-3.5 text-sm sm:text-base md:text-base lg:text-lg font-semibold bg-primary/0 border border-primary text-white 
   rounded-lg hover:bg-primary-hover/30 focus:bg-primary-hover/30  transition-opacity duration-200 active:scale-95;
 }
 /* Buttons end */
